assets/css/main.css
.body {
    background: #718292;
}

/*Main Box CSS*/
  .box{
    background: #082341;
    padding: 40px;
    text-align: center;
    margin: auto;
    margin-top: 1.5%;
    padding-bottom: 50px;
    color: white;
    font-family: 'Century Gothic',sans-serif;
    -webkit-animation: fadein 1.5s ; /* Safari, Chrome and Opera > 12.1 */
    -moz-animation: fadein 1.5s; /* Firefox < 16 */
     -ms-animation: fadein 1.5s; /* Internet Explorer */
      -o-animation: fadein 1.5s; /* Opera < 12.1 */
         animation: fadein 1.5s;
  }

  .box-projects {
      padding-bottom: 200px;
  }
    @keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
        from{ transform: translateX(-500px)}
        to{transform: translateX(0)}
    }

    /* Firefox < 16 */
    @-moz-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
        from{ transform: translateX(-500px)}
        to{transform: translateX(0)}
    }

    /* Safari, Chrome and Opera > 12.1 */
    @-webkit-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
        from{ transform: translateX(-500px)}
        to{transform: translateX(0)}
    }

    /* Internet Explorer */
    @-ms-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
        from{ transform: translateX(-500px)}
        to{transform: translateX(0)}
    }

    /* Opera < 12.1 */
    @-o-keyframes fadein {
        from { opacity: 0; }
        to   { opacity: 1; }
        from{ transform: translateX(-500px)}
        to{transform: translateX(0)}
    }



  .box-text {
      color: #FFFFFF;
      align-items: center;
  }

  .box-title {
      color: #AE9A61;
      text-align: center;
  }

  .box-img{
    border-radius: 50%;
    width: 200px;
    height: 200px;
    margin-bottom: 20px;
  }
  .box h1{
    font-size: 40px;
    letter-spacing: 3px;
    font-weight: 100;
  }
  .box h5{
    font-size: 20px;
    letter-spacing: 3px;
    font-weight: 100;
  }

  .box li{
    display: inline-block;
    margin: 6px;
    list-style: none;
  }
  .box li a{
    color: white;
    text-decoration: none;
    font-size: 60px;
    
  }
  .box li a:hover{
    color: #b9b9b9;
  }


 /* Sizing for different views */
 /*Small devices (landscape phones, 576px and up)*/
@media (min-width: 300px) {
    .box-text {
        font-size: 10px;
    }
    .box-title {
        font-size: 30px;
        text-align: center;
    }
    .box-subtitle {
        font-size: 20px;
        text-align: center;
    }

    .info {
        text-align: left;
    }
    .box {
        height: 90%;
    }
}

@media (max-width: 400px) {
    .projects-row {
        width: 300px;
        align-items: center;
    }
}

/*Medium devices (tablets, 768px and up)*/
@media (min-width: 715px) {
    .box{
        width: 500px;
    }
}
@media (min-width: 715px) {
    .box{
        font-size: 10px;
        letter-spacing: 2px;
    }
    .box-title{
        font-size: 50px;
    }
    .box-subtitle {
        font-size: 25px;
    }
}

/*Large devices (desktops, 992px and up)*/
@media (min-width: 992px) {
    .box{
        width: 800px;
    }
    .box-title{
        font-size: 50;
    }
    .box-subtitle {
        font-size: 25;
    }

}

@media (max-width: 1000px) {
   .box-projects {
       padding-bottom: 300px;
   }

}


/*Extra large devices (large desktops, 1200px and up)*/
@media (min-width: 1200px) {
    .box{
        width: 1000px;
    }
    .box-title{
        font-size: 50px;
    }
    .box-subtitle {
        font-size: 25px;
    }
    .box-text {
        font-size: 15px;
    }
}

.projects-row {
    border: 1px solid #063468;
    border-radius: 12px;
    margin-bottom: 20px;
    width: 300px;
    height: 200px;
}

.projects-row-larger {
    height: 220px;
}

.projects-links {
    align-items: center;
    height: 30px;
    margin-top: -100px;
}

.projects-links:hover{
    opacity: 0.6;
}

.description {
    padding-left: 5px;
    padding-right: 5px;
}


/* Button */
.link {
    background-color: #FFFFFF; /* Green */
    border: none;
    color: #082341;
    padding: 15px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 15px;
    margin: 8px 4px;
    cursor: pointer;
    border-radius: 12px;
    margin-bottom: 20px;
  }

  .link:hover{
    background: #b9b9b9;
}

.keyword {
    color: #555555; 
    background-color: #eeeeee; 
    width: 70px;
    text-align: center;
    
}

